# sfm-gaussian-splatting

./: README.md
sfm_cpp/: CMakeLists.txt  CMakeSettings.json  Makefile
sfm_cpp/cmake/: FetchImGui.cmake
sfm_cpp/include/: ba_cost_function.h  gui.h  sfm_system.h  viewer.h
sfm_cpp/pangolin_test/: CMakeLists.txt  main.cpp
sfm_cpp/src/: convert_script.py  gui.cpp  main.cpp  sfm_system.cpp  splat_script.py  viewer.cpp
